--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <!-- Favicon -->
         <link rel="shortcut icon" href="assets/images/favicon.png" />
         <!-- Plugins CSS -->
-        <link rel="stylesheet" href="assets/css/plugins.css">
+        <link rel="stylesheet" href="plugins.css">
         <!-- Main Style CSS -->
-        <link rel="stylesheet" href="assets/css/style-min.css">
-        <link rel="stylesheet" href="assets/css/responsive.css">
+        <link rel="stylesheet" href="style-min.css">
+        <link rel="stylesheet" href="responsive.css">
     </head>
 
     <body class="template-index index-demo1">
